assets/css/style.css
/* Google Font */

@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap");

/* Set global size for easy rem calculation and add some reset style */
* {
  font-size: 10px;
}
body {
  font-family: "Mulish", sans-serif;
  background-color: #181822;
  color: #fafafb;
}
/*--Preload class code from stack overflow to fix bug of transitions happening on page load*/
.preload * {
 transition:none;
}
.row {
  height: 100%;
}
/*-------------------- Centering class -----------------*/
/*Code from stack overflow on how to center divs more details in readme file*/
.center {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: auto;
}
/* ------------------ Font sizes and weights------------------*/
.main-title {
  font-size: 5.75rem;
  font-weight: 800;
}
.section-heading {
  font-size: 5rem;
}
.sub-heading {
  font-size: 4rem;
}
.section-heading,
.sub-heading {
  font-weight: 700;
  text-align: center;
}
.hero-text,
.about-text {
  font-size: 1.4rem;
  font-weight: 400;
}
/* ------------------------ Common Elements link and destination cards ----- */
/*---- Links and buttons ----*/
.link {
  text-decoration: none;
  text-align: center;
  background-color: #fafafb;
  color: #181822;
  border-radius: 1rem;
  transition: all 0.3s ease-in-out;
  font-size: 1.5rem;
  padding: 0.5rem;
  font-weight: 800;
}
a:hover,
.map-btn:hover,
.submit-btn:hover {
  background-color: #181822;
  color: #fafafb;
  text-decoration: none;
}
.social-media-links i {
  font-size: 3rem;
  color: #fafafb;
  transition: all 0.5s ease-in-out;
}
.social-media-links i:hover {
  background-color: #fafafb;
  color: #181822;
  padding: 0.2rem;
  border-radius: 0.5rem;
}
button:focus {
  outline: none;
}
/*---- Cards ----*/
.destination-card,
.package-card {
  position: relative;
  box-shadow: 1rem 1rem 0.5rem rgba(0, 0, 0, 0.5);
}
.destination-card {
  height: 25rem;
  width: 18rem;
}
.package-card {
  height: 28rem;
  width: 21rem;
}
.card-img {
  height: 100%;
  width: 100%;
  z-index: 100;
}
.card-content {
  position: absolute;
  bottom: 2.5rem;
  text-align: center;
  left: 0;
  right: 0;
  z-index: 300;
  text-transform: uppercase;
}
.card-title {
  font-size: 3rem;
  padding-bottom: 3.75rem;
  text-align: center;
  text-shadow: 0.2rem 0.2rem 0.1rem #181822;
}
.card-content p {
  font-size: 1.4rem;
  text-shadow: 0.2rem 0.2rem 0.1rem #181822;
}
.gradient {
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: 0.4;
  z-index: 200;
}
/* ------------------------------- Background images css -------------------  */
.background-image {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}
.background-image::before,
.background-image::after {
  content: "";
  height: 50%;
  width: 100%;
  position: absolute;
  left: 0;
}
.background-image::before {
  bottom: 0;
  background: linear-gradient(to top, #181822, transparent 35%);
}
.background-image:after {
  top: 0;
  background: linear-gradient(to bottom, #181822, transparent 35%);
}

/*---------------------------------- Css for animating elements in------------*/
/*--Code was inspired by Dev Ed youtube tutorial --*/

.animation-element {
  opacity: 0;
  transform: translateY(50px);
  transition: all 1.2s ease-in;
}
.animation-active {
  opacity: 1;
  transform: translateY(0px);
}
/* ------Navigation section Inspired by Code and Create tutorial on youtube---*/
.logo a {
  position: fixed;
  top: 4%;
  left: 5%;
  color: #fafafb;
  font-size: 2rem;
  z-index: 500;
  transition: all 0.5s ease-out;
}
.logo a:hover {
  text-decoration: none;
  transform: scale(1.2);
}

.hamburger {
  width: 5.5rem;
  height: 5.5rem;
  background-color: transparent;
  position: fixed;
  top: 2%;
  right: 4%;
  z-index: 500;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: none;
}
.hamburger:focus {
  outline: none;
}
.line {
  width: 3rem;
  height: 0.2rem;
  background-color: #fafafb;
  margin: 0.2rem 0;
  transform-origin: right;
  transition: all 0.75s;
}
.change .line1 {
  transform: rotate(-40deg) translateY(-5px);
  background-color: #181822;
}
.change .line2 {
  opacity: 0;
}
.change .line3 {
  transform: rotate(40deg) translateY(5px);
  background-color: #181822;
}
.nav-background {
  width: 6rem;
  height: 6rem;
  position: fixed;
  top: 2.2rem;
  right: 2.2rem;
  z-index: 400;
  transition: all 1s ease;
}
.change .nav-background {
  background-color: #fafafb;
  transform: scale(150);
}
.navigation-list {
  height: 100%;
  width: 100%;
  position: fixed;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 400;
  opacity: 0;
  visibility: hidden;
  transition: all 0.75s ease;
}
.change .navigation-list {
  opacity: 1;
  visibility: visible;
}
.navigation-item {
  margin: 1.5vh;
}
.navigation-link {
  font-weight: 600;
  font-size: 3vh;
  letter-spacing: 0.4rem;
  text-decoration: none;
  color: #181822;
  transition: all 0.5s ease-in-out;
  text-transform: uppercase;
}
.navigation-link:hover,
.other-des-link:hover {
  background-color: #181822;
  color: #fafafb;
  padding: 0.2rem 0.5rem;
  border-radius: 0.5rem;
}
/*----------------------------- Hero image section home page------------------*/
.hero-container,
.right-gradient {
  height: 69rem;
}
.hero-img {
  background: url(../images/hero-img-4.jpg) no-repeat center center scroll;
  background-size: cover;
}
.right-gradient {
  width: 20%;
  position: absolute;
  top: 0;
  left: 0;
  background: linear-gradient(to right, #181822, transparent);
}
.heading {
  position: absolute;
  top: 20%;
  left: 2.5%;
  border-left: #fafafb 2px solid;
  padding: 3% 5%;
  display: flex;
  flex-direction: column;
  background: rgba(0, 0, 0, 0.3);
}
.home-page-title {
  text-shadow: 0.4rem 0.4rem 0.3rem #181822;
}
.hero-text {
  padding: 5% 0;
  text-shadow: 0.3rem 0.3rem 0.2rem #181822;
}
/* ... */

